[gd_scene load_steps=22 format=2]

[ext_resource path="res://Textures/Enemy/Orb Mage/spritesheet (2).png" type="Texture" id=1]
[ext_resource path="res://DamageBoxes/Hitbox.gd" type="Script" id=2]
[ext_resource path="res://DamageBoxes/Hurtbox.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemies/Orb Mage/OrbMage.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Enemies/Orb Mage/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Enemies/Orb Mage/Idle.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Enemies/Orb Mage/Die.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Enemies/Orb Mage/Hit.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Enemies/Orb Mage/Attack.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Enemies/Orb Mage/RangedAttack.gd" type="Script" id=10]

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=10]
height = 84.0191

[sub_resource type="CapsuleShape2D" id=9]
radius = 6.0
height = 10.0

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 8, 15, 22, 29, 36, 43, 50, 57, 64, 71, 78, 85 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "summon_attack"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Die"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 9, 16, 23, 30, 37, 44 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Heal"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 10, 17, 24, 31, 38, 45, 52, 59, 66, 73, 80, 87, 94 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 11, 18 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 12, 19 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Sweep Attack"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 7, 14, 21, 28, 35, 42, 49, 56, 63, 70, 77, 84, 91, 98, 105 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 13, 20, 27, 34, 41, 48, 55 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 152, 72 )

[node name="OrbMage" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 0
script = ExtResource( 4 )
max_health = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource( 2 )
damage = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 43, -1 )
rotation = 1.55334
shape = SubResource( 10 )
disabled = true

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -2, -1 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 38, -7 )
texture = ExtResource( 1 )
hframes = 7
vframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Die = SubResource( 2 )
anims/Heal = SubResource( 3 )
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 5 )
"anims/Sweep Attack" = SubResource( 6 )
anims/Walk = SubResource( 7 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="RangedAttack" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="AttackCooldown" type="Timer" parent="StateMachine/RangedAttack"]
wait_time = 2.0
one_shot = true

[node name="Evade" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="StateMachine/Hit"]
wait_time = 0.25
one_shot = true

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2( 0, -20 )
shape = SubResource( 11 )

[node name="Targeter" type="RayCast2D" parent="."]
collision_mask = 16

[node name="TpFinder" type="RayCast2D" parent="."]
position = Vector2( -1, -20 )
cast_to = Vector2( 0, 30 )

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Evade" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StateMachine/RangedAttack/AttackCooldown" to="StateMachine/RangedAttack" method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="StateMachine/Hit/Timer" to="StateMachine/Hit" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Vision" to="StateMachine/Idle" method="_on_Vision_body_entered"]
